Added an item view when clicking on item's div

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
     </div>
     <% items.forEach(item=> { %>
         <% if(item.name!=" ") { %>
-            <div class="item" onclick="console.log(`<%=item.id%>`)">
+            <div class="item" onclick="window.location.href='/items/<%=item.id%>'">
                 <h1><%= item.name %></h1>
                 <h1>$<%= item.cost%></h1>
             </div>
