Made login/signup slightly prettier

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,8 +9,8 @@
 <body>
     <h1>Log In</h1>
     <form action="/users/login" method="POST">
-        <input name="username" type="String">
-        <input name="password" type="String">
+        <input name="username" type="String" placeholder="Username">
+        <input name="password" type="String" placeholder="Password">
         <button type="submit">Submit</button>
     </form>
     <button id="signUp">Sign Up</button>
