--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -9,9 +9,9 @@
 <body>
     <h1>Sign Up</h1>
     <form action="/users/userCheck" method="POST">
-        <input name="name" id="name" type="String">
-        <input name="username" id="username" type="String">
-        <input name="password" id="password" type="String">
+        <input name="name" id="name" type="String" placeholder="Name">
+        <input name="username" id="username" type="String" placeholder="Username">
+        <input name="password" id="password" type="String" placeholder="Password">
         <input type="submit">
     </form>
 </body>
