--- a/views/itemView.ejs
+++ b/views/itemView.ejs
@@ -14,6 +14,9 @@
     </div>
     <div id="item">
         <h1><%=item.name %> - $<%=item.cost %></h1>
+        <% if(isOwner) { %>
+            <button id="trash">Delete</button>
+        <%}%>
         <h1><%=item.desc %></h1>
     </div>
 </body>
