Fixed routing error

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,8 +15,8 @@
     </div>
     <% items.forEach(item=> { %>
         <% if(item.name!=" ") { %>
-            <form action="/items/<%=item.id%>-<%=user.id%>?_method=PATCH" method="POST" id="patch">
-                <div class="item" onclick="document.getElementById('patch').submit()">
+            <form action="/items/<%=item.id%>-<%=user.id%>?_method=PATCH" method="POST" id="patch-<%=item.id%>">
+                <div class="item" onclick="document.getElementById('patch-<%=item.id%>').submit()">
                     <h1><%= item.name %></h1>
                     <h1>Views: <%= item.views %></h1>
                     <h1>$<%= item.cost%></h1>
