--- a/views/itemView.ejs
+++ b/views/itemView.ejs
@@ -15,7 +15,7 @@
     <div id="item">
         <h1><%=item.name %> - $<%=item.cost %></h1>
         <% if(isOwner) { %>
-            <form action="/items/<%=item.id%>-<%=user.id%>?_method=DELETE" method="POST"><button id="trash">Delete</button></form>
+            <form action="/items/<%=item.id%>?_method=DELETE" method="POST"><button id="trash">Delete</button></form>
         <%}%>
         <h1><%=item.desc %></h1>
     </div>
