Allow user to go back to main page

--- a/views/itemView.ejs
+++ b/views/itemView.ejs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/itemView.css" type="text/css">
 </head>
 <body>
-    <div id="header">
+    <div id="header" onclick="window.location.href='/items/user=<%=user.id%>'">
         <h1 id="head" style="display: inline-block">GameTrader</h1>
     </div>
     <div id="item">
