Added password change option

--- a/views/userPage.ejs
+++ b/views/userPage.ejs
@@ -5,14 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GameTrader</title>
+    <link rel="stylesheet" href="/index.css" type="text/css">
 </head>
 <body>
-    <div id="header">
+    <div id="header" onclick="window.location.href='/items/user=<%=user.id%>'">
         <h1 id="head" style="display: inline-block">GameTrader</h1>
     </div>
     <div>
         <button onclick="window.location.href='/'">Sign Out</button>
         <form action="/users/del/<%=user.id%>?_method=DELETE" method="POST"><button>Delete User</button></form>
+        <form action="/users/<%=user.id%>?_method=PATCH" method="POST">
+            <input type="text" placeholder="Update Password" name="newPass">
+            <button type="submit">Submit Password Change</button>
+        </form>
     </div>
 </body>
 </html>
